// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default render 1`] = `
<div class="Cell">
  <!---->
  <div class="body-wrapper">
    <div class="body"></div>
    <transition-stub name="revealSettings">
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`editable 1`] = `
<div class="Cell">
  <header class="header">
    <h2 class="title">Important section</h2> <button class="header-button">
      <v-icon name="ellipsis-h"></v-icon>
    </button>
  </header>
  <div class="body-wrapper">
    <div class="body"></div>
    <transition-stub name="revealSettings">
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`toggle settings 1`] = `
<div class="Cell">
  <header class="header">
    <h2 class="title">Important section</h2> <button class="header-button">
      <v-icon name="ellipsis-h"></v-icon>
    </button>
  </header>
  <div class="body-wrapper">
    <div class="body"></div>
    <transition-stub name="revealSettings">
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`with content in props 1`] = `
<div class="Cell">
  <!---->
  <div class="body-wrapper">
    <div class="body">
      <customcomponent-stub foo="custom-prop" class="body-item"></customcomponent-stub>
      <customcomponent-stub bar="2" class="body-item"></customcomponent-stub>
    </div>
    <transition-stub name="revealSettings">
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`with content in slots 1`] = `
<div class="Cell">
  <!---->
  <div class="body-wrapper">
    <div class="body">
      <div>1</div>
      <div>2</div>
      <div>3</div>
    </div>
    <transition-stub name="revealSettings">
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`with title 1`] = `
<div class="Cell">
  <header class="header">
    <h2 class="title">Important section</h2>
    <!---->
  </header>
  <div class="body-wrapper">
    <div class="body"></div>
    <transition-stub name="revealSettings">
      <!---->
    </transition-stub>
  </div>
</div>
`;
